--- a/style.css
+++ b/style.css
@@ -97,7 +97,6 @@ input:focus{
 }
 
 h4{
-    width: 480px;
     padding-left: 20px;
 }
 
@@ -132,4 +131,100 @@ button{
     background: rgb(20, 132, 238);
     color: #fff;
     border-radius: 5px;
+}
+
+.desc{
+    font-weight: normal;
+    color: rgb(245, 6, 6);
+    font-size: smaller;
+}
+
+#password,
+#confirm-pass{
+    border: 1px solid rgba(245, 6, 6, 0.562);
+}
+
+@media screen and (max-width: 480px) {
+
+    .container{
+        display: block;
+    }
+
+    .logo-div{
+        position: relative;
+        height: 300px;
+        width: 100%;
+        border-radius: 0 0 50% 0;
+        box-shadow: 0 3px 15px #000;
+        margin-bottom: 20px;
+        background: url("2007076.jpg") no-repeat center;
+    }
+
+    .logo{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #fff;
+        top: 0;
+        width: 100%;
+        padding: 0.2rem;
+        font-family: "norse-bold";
+        background: rgba(0, 0, 0, 0.541);
+    }
+
+    img{
+        height: 30px;
+        width: 30px;
+    }
+
+    h4{
+        margin-left: 20px;
+    }
+
+    .logo-div p{
+        position: absolute;
+        left: 3px;
+        bottom: 10px;
+        color: rgb(20, 132, 238);
+        font-weight: bold;
+    }
+    
+    .logo-div a{
+        color: #000;
+    }
+
+    .form-details{
+        background: rgba(199, 196, 196, 0.205);
+        align-items: center;
+        width: 100%;
+    }
+
+    .first-sect{
+        display: block;
+    }
+
+    form{
+        margin-bottom: 100px;
+        width: 100%;
+    }
+
+    .sheet{
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.219);
+        margin-top: 40px;
+        margin-bottom: 20px;
+        background: #fff;
+        padding: 20px;
+        width: 100%;
+    }
+
+    label{
+        display: block;
+        margin-top: 10px;
+        font-size: 10px;
+        font-weight: bold;
+    }
+
+    form button, .login{
+        margin-left: 20px;
+    }
 }
